--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "saas": "^1.0.0",
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
